--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+  border-radius: 20px;
+  margin: 5px;
+  padding: 5px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.hello{
+  font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
 }
+
+div {
+  text-align: center;
+}
+
+
+
+ul li{
+  color: white;
+  border-radius: 100px;
+  border: 2px solid cornflowerblue;
+  background-color: rgb(25,118,210);
+  margin-left: 100px;
+  margin-right: 100px;
+
+}
+
+
